kubernetes/environments/test/apps/keycloak/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: pilot-apps
    app.kubernetes.io/managed-by: argocd
